Add meta tags to the page logo-and-visual-identity

--- a/services/logo-and-visual-identity/index.html
+++ b/services/logo-and-visual-identity/index.html
@@ -3,7 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>خدمات تصميم الشعارات والهويات البصرية - شركة ايجبت للدعاية والإعلان بجدة</title>
+  <!-- Title -->
+  <title>خدمات تصميم الشعارات والهويات البصرية - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات تصميم الشعارات والهوية البصرية الاحترافية التي تعكس هوية علامتك التجارية وتجذب عملاءك، مع تصاميم مميزة وجودة عالية.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="تصميم شعار, تصميم شعارات جدة, تصميم هوية بصرية, شركة تصميم شعارات جدة, تصميم لوجو, تصميم علامة تجارية, شركة دعاية واعلان جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="خدمات تصميم الشعارات والهويات البصرية - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="تصميم احترافي للشعارات والهويات البصرية لتعزيز حضور علامتك التجارية وتمييزها عن المنافسين.">
+  <meta property="og:url" content="https://egypt-advertising.com/logo-and-visual-identity">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/Logo-design.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/logo-and-visual-identity">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
      <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -21,6 +45,31 @@
             }
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "تصميم الشعارات والهويات البصرية",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/Logo-design.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "خدمات احترافية لتصميم الشعارات والهويات البصرية بجدة، مع تصاميم مبتكرة تساعد في تعزيز العلامة التجارية وجذب العملاء."
+}
+</script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
         body {
