Add meta tags to the page neon-signs

--- a/services/neon-signs/index.html
+++ b/services/neon-signs/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>لوحات النيون المضيئة - شركة ايجبت للدعاية والإعلان بجدة</title>
+  <!-- Title -->
+  <title>لوحات النيون المضيئة - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم تصميم وتنفيذ لوحات النيون المضيئة للمحلات والشركات بجودة عالية وتصاميم عصرية لجذب العملاء وإبراز هوية علامتك التجارية.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="لوحات نيون, لوحات نيون مضيئة, تصميم لوحات نيون جدة, تركيب لوحات نيون, لوحات محلات نيون, لوحات دعائية جدة, شركة دعاية واعلان جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="لوحات النيون المضيئة - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="تصميم وتركيب لوحات نيون مضيئة بجدة بجودة عالية لتسويق متجرك وجذب العملاء بعرض احترافي وجذاب.">
+  <meta property="og:url" content="https://egypt-advertising.com/neon-signs">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/implementation-of-lighting.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/neon-signs">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -31,6 +55,31 @@
         },
       };
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "لوحات النيون المضيئة",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/logo-egypt-advertising-1.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com/neon-signs"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "خدمات تصميم وتنفيذ لوحات نيون مضيئة بجدة للمحلات والشركات، بجودة عالية وتصاميم مميزة لإبراز علامتك التجارية وجذب العملاء."
+}
+</script>
+
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap");
 
