Add meta tags to the page photography-and-montage

--- a/services/photography-and-montage/index.html
+++ b/services/photography-and-montage/index.html
@@ -3,7 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>خدمات التصوير والمونتاج - شركة ايجبت للدعاية والإعلان بجدة</title>
+<head>
+  <!-- Title -->
+  <title>خدمات التصوير والمونتاج - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات تصوير احترافية ومونتاج إبداعي للإعلانات والفيديوهات التسويقية وحفلات الشركات، باستخدام أحدث التقنيات لإبراز علامتك التجارية بأعلى جودة.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="التصوير والمونتاج, تصوير احترافي جدة, مونتاج فيديو جدة, تصوير منتجات, تصوير إعلانات, تصوير مناسبات, تصوير حفلات, شركة تصوير جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="خدمات التصوير والمونتاج - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="تصوير احترافي ومونتاج مميز للإعلانات والفيديوهات التسويقية بخبرة عالية وجودة احترافية في جدة.">
+  <meta property="og:url" content="https://egypt-advertising.com/photography-video-editing">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/photography-editing.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/photography-video-editing">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
     <meta
       name="description"
       content="خدمات تصوير احترافية ومونتاج إبداعي لإبراز منتجاتك وأعمالك بأفضل صورة ممكنة، مع لمسة فنية تساهم في جذب عملائك وزيادة التفاعل"
@@ -35,6 +60,31 @@
         },
       };
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "خدمات التصوير والمونتاج",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/logo-egypt-advertising-1.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com/photography-video-editing"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "شركة ايجبت تقدم خدمات تصوير احترافية ومونتاج فيديو إبداعي بجدة، تشمل تصوير المنتجات والإعلانات والمناسبات بخبرة عالية وجودة استثنائية."
+}
+</script>
+
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap");
       body {
