Add meta tags to the page signs-and-prominent-letters

--- a/services/signs-and-prominent-letters/index.html
+++ b/services/signs-and-prominent-letters/index.html
@@ -4,7 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <!-- Title -->
   <title>الحروف البارزة والمضيئة - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات تصميم وتنفيذ الحروف البارزة والمضيئة بجودة عالية وخامات ممتازة لإبراز واجهات المحلات والشركات وجذب العملاء.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="الحروف البارزة, الحروف المضيئة, تركيب حروف بارزة جدة, تصميم حروف بارزة, حروف مضيئة للمحلات, لوحات محلات جدة, شركة دعاية واعلان جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="الحروف البارزة والمضيئة - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="تصميم وتركيب الحروف البارزة والمضيئة بجدة بخامات ممتازة لتسويق متجرك وجذب العملاء بلمسة احترافية.">
+  <meta property="og:url" content="https://egypt-advertising.com/signs-and-prominent-letters">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/lettering-design.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/signs-and-prominent-letters">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -25,6 +50,32 @@
       }
     }
   </script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "الحروف البارزة والمضيئة",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/logo-egypt-advertising-1.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com/signs-and-prominent-letters"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "شركة ايجبت تقدم خدمات تصميم وتركيب الحروف البارزة والمضيئة بجدة، بخامات عالية الجودة لتزيين واجهات المحلات والشركات وجذب العملاء."
+}
+</script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
