Add meta tags to the page website-programming

--- a/services/website-programming/index.html
+++ b/services/website-programming/index.html
@@ -4,7 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title -->
   <title>تصميم وبرمجة المواقع - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="شركة ايجبت للدعاية والإعلان بجدة تقدم خدمات تصميم وبرمجة المواقع الاحترافية والمتجاوبة، مع تحسين محركات البحث وتجربة مستخدم مميزة لزيادة مبيعاتك وجذب العملاء.">
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="تصميم مواقع جدة, برمجة مواقع جدة, تصميم مواقع احترافية, شركة تصميم مواقع, تطوير مواقع الكترونية, تصميم متاجر الكترونية, شركة برمجة مواقع جدة, ايجبت للدعاية والإعلان, egypt advertising">
+
+  <!-- Open Graph for Social Media -->
+  <meta property="og:title" content="تصميم وبرمجة المواقع - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="نصمم ونبرمج مواقع احترافية ومتجاوبة تلبي احتياجات عملك وتساعدك على التميز في سوق جدة والمملكة العربية السعودية.">
+  <meta property="og:url" content="https://egypt-advertising.com/website-programming">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/design-and-programming.webp">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/website-programming">
+
+  <!-- Language Settings -->
+  <meta name="language" content="ar">
+  <meta http-equiv="Content-Language" content="ar">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -25,6 +49,31 @@
       }
     }
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "تصميم وبرمجة المواقع",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "شركة ايجبت للدعاية والإعلان",
+    "image": "https://egypt-advertising.com/assets/img/logo-egypt-advertising-1.webp",
+    "telephone": "+966501234567",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "جدة",
+      "addressCountry": "SA"
+    },
+    "url": "https://egypt-advertising.com/website-programming"
+  },
+  "areaServed": {
+    "@type": "Place",
+    "name": "جدة"
+  },
+  "description": "شركة ايجبت بجدة تقدم خدمات تصميم وبرمجة المواقع الاحترافية، بما في ذلك المتاجر الإلكترونية، المواقع التعريفية، ومواقع الشركات، مع تحسين لمحركات البحث وتجربة مستخدم فريدة."
+}
+</script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap');
 
