Add an SEO page

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!-- CTA + Menu Button -->
     <div class="flex items-center space-x-reverse space-x-4">
       <div class="text-right hidden md:block">
-        <a href="tel:+966501234567"
+        <a href="tel:501234567"
           class="btn-responsive gradient-primary text-white shadow-md hover:bg-primary-dark transition-colors">
           <p class="text-sm">اتصل بنا</p>
         </a>
@@ -204,7 +204,7 @@
       <a href="#about" class="text-black hover:text-primary transition-colors font-medium">من نحن</a>
       <a href="#services" class="text-black hover:text-primary transition-colors font-medium">خدماتنا</a>
       <a href="#Our-business" class="text-black hover:text-primary transition-colors font-medium">اعمالنا</a>
-      <a href="tel:+966501234567"
+      <a href="tel:0501234567"
         class="btn-responsive bg-primary text-white shadow-md hover:bg-primary-dark transition-colors">
         اتصل بنا
       </a>
@@ -227,7 +227,7 @@
           <p class="text-lg md:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto">
             نحول أفكارك إلى حملات إعلانية مؤثرة تحقق النجاح والانتشار.
           </p>
-          <a href="tel:+966501234567" aria-label="اتصل بنا لبدء مشروعك">
+          <a href="tel:0501234567" aria-label="اتصل بنا لبدء مشروعك">
             <button 
               class="btn-responsive bg-white text-blue-600 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               ابدأ مشروعك
@@ -248,7 +248,7 @@
           <p class="text-lg md:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto">
             خبرة تزيد عن 10 سنوات في صناعة الإعلان والتسويق الرقمي.
           </p>
-          <a href="tel:+966501234567" aria-label="اكتشف أعمالنا السابقة">
+          <a href="tel:0501234567" aria-label="اكتشف أعمالنا السابقة">
             <button 
               class="btn-responsive bg-white text-pink-600 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               استكشف أعمالنا
@@ -269,7 +269,7 @@
           <p class="text-lg md:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto">
             شريكك الموثوق لتحقيق أهدافك التسويقية وبناء علامتك التجارية.
           </p>
-          <a href="tel:+966501234567" aria-label="تواصل معنا مباشرة">
+          <a href="tel:0501234567" aria-label="تواصل معنا مباشرة">
             <button 
               class="btn-responsive bg-white text-blue-500 rounded-full font-bold hover:bg-gray-100 transition-colors shadow-lg">
               تواصل معنا
@@ -389,7 +389,7 @@
 
         <!-- زر تواصل -->
         <div class="fade-in">
-          <a href="tel:+966501234567" 
+          <a href="tel:0501234567" 
             class="btn-responsive gradient-bg text-white rounded-full font-bold shadow-md hover:shadow-lg transition-all duration-300"
             aria-label="تواصل معنا عبر الهاتف">
             تواصل معنا <i class="fas fa-arrow-left btn-icon-spacing"></i>
@@ -821,6 +821,49 @@
       </a>
   </div>
         </div>
+
+
+        <div class="service-card bg-white p-4 rounded-2xl fade-in">
+  <!-- الصورة -->
+  <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
+    <img src="./assets/img/search-engine-optimization.jpg" 
+         alt="تحسين محركات البحث SEO وتحسين ظهور الموقع"
+         class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
+  </div>
+
+  <!-- العنوان -->
+  <h2 class="text-xl font-bold mb-4">تحسين محركات البحث (SEO)</h2>
+
+  <!-- الوصف -->
+  <p class="text-gray-600 mb-6">
+    نساعدك على رفع ترتيب موقعك في نتائج محركات البحث من خلال استراتيجيات تحسين
+    مدروسة تضمن زيادة عدد الزوار المستهدفين وتحقيق نمو حقيقي لأعمالك عبر الإنترنت.
+  </p>
+
+  <!-- المميزات -->
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تحسين هيكل الموقع وتجربة المستخدم</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>استهداف الكلمات المفتاحية بدقة</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تحسين سرعة الموقع وأدائه</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>متابعة وتحليل الأداء بتقارير تفصيلية</li>
+  </ul>
+
+  <!-- أزرار -->
+  <div class="btn-container btn-center mt-6">
+    <!-- زر الاتصال -->
+    <a href="tel:0501234567"
+       class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt btn-icon-spacing"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="./services/seo-optimization/index.html"
+       class="service-btn gradient-primary text-white hover:scale-105 transform transition">
+       قراءة المزيد
+      <i class="fas fa-arrow-left btn-icon-spacing"></i>
+    </a>
+  </div>
+</div>
 
 
       </div>
@@ -1527,7 +1570,7 @@
         <p class="text-gray-600 leading-relaxed">
           <span class="font-semibold" style="color:#0e8779;">النجاح</span> يبدأ برسالة واضحة، وإعلان قوي يوصلها صح.
         </p>
-        <a href="tel:+966501234567"
+        <a href="tel:0501234567"
           class="btn-responsive mt-4 text-white rounded-lg shadow-lg transition duration-300"
           style="background-color:#0e8779;">
           ابدأ حملتك الآن
@@ -1670,11 +1713,11 @@
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-phone text-primary"></i>
-            <span class="text-gray-300" dir="ltr">+966 563374482</span>
+            <span class="text-gray-300" dir="ltr">0 563374482</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-phone text-primary"></i>
-            <span class="text-gray-300" dir="ltr">+966 565265233</span>
+            <span class="text-gray-300" dir="ltr">0 565265233</span>
           </div>
           <div class="flex items-center space-x-reverse space-x-3">
             <i class="fas fa-envelope text-primary"></i>
