adding meta tags in search-engine-optimization

--- a/services/search-engine-optimization/index.html
+++ b/services/search-engine-optimization/index.html
@@ -4,9 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تحسين محركات البحث (SEO) - شركة ايجبت للدعاية والإعلان بجدة</title>
-    <meta name="description"
-        content="نقدم خدمات تحسين محركات البحث (SEO) لرفع ترتيب موقعك في نتائج البحث وجذب المزيد من العملاء المحتملين. خبرة واسعة في تحسين المواقع لمختلف القطاعات.">
+     <!-- عنوان الصفحة -->
+  <title>تحسين محركات البحث (SEO) - شركة ايجبت للدعاية والإعلان بجدة</title>
+
+  <!--  (Meta Description) -->
+  <meta name="description" content="خدمات تحسين محركات البحث (SEO) من شركة ايجبت للدعاية والإعلان بجدة لرفع ترتيب موقعك في جوجل وزيادة عدد الزوار والعملاء المحتملين. استراتيجيات احترافية لضمان نتائج مميزة.">
+
+  <!-- (Meta Keywords) -->
+  <meta name="keywords" content="تحسين محركات البحث, SEO جدة, شركة SEO, تسويق إلكتروني, تصدر نتائج البحث, خدمات سيو, ايجبت للدعاية والإعلان, تسويق رقمي, تحسين المواقع, جدة">
+
+  <!-- المؤلف -->
+  <meta name="author" content="شركة ايجبت للدعاية والإعلان">
+
+  <!-- Open Graph  -->
+  <meta property="og:title" content="تحسين محركات البحث (SEO) - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta property="og:description" content="نرفع ترتيب موقعك في محركات البحث عبر استراتيجيات سيو احترافية لجذب العملاء وزيادة المبيعات.">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/search-engine-optimization.jpg">
+  <meta property="og:url" content="https://egypt-advertising.com/search-engine-optimization">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="ar_AR">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="تحسين محركات البحث (SEO) - شركة ايجبت للدعاية والإعلان بجدة">
+  <meta name="twitter:description" content="خدمات SEO احترافية لرفع ترتيب موقعك وزيادة العملاء في جدة.">
+  <meta name="twitter:image" content="https://egypt-advertising.com/assets/img/search-engine-optimization.jpg">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://egypt-advertising.com/search-engine-optimization">
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://egypt-advertising.com/assets/img/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -266,7 +294,7 @@
                     <div class="mt-8 p-4 gradient-bg rounded-lg border border-primary border-opacity-20">
                         <h3 class="text-lg font-bold text-primary mb-3">اطلب خدمة SEO الآن</h3>
                         <p class="text-gray-700 mb-4 text-sm">احصل على تحليل مجاني لموقعك</p>
-                        <a href="tel:+966501234567"
+                        <a href="tel:0501234567"
                             class="block w-full bg-primary text-white text-center py-2 px-4 rounded-lg hover:bg-primaryDark transition duration-300 mb-2">
                             <i class="fas fa-phone ml-2"></i>اتصل بنا
                         </a>
@@ -288,7 +316,7 @@
                         <p class="text-lg md:text-xl mb-6">ارفع ترتيب موقعك في نتائج البحث وجذب المزيد من العملاء
                             المحتملين بخدمات SEO المتكاملة</p>
                         <div class="flex flex-wrap gap-4">
-                            <a href="tel:+966501234567"
+                            <a href="tel:0501234567"
                                 class="bg-white text-primary py-3 px-6 rounded-lg font-bold hover:bg-gray-100 transition duration-300">
                                 <i class="fas fa-phone ml-2"></i>اطلب خدمتك
                             </a>
